b-splines for lstm

--- a/modeling_with_new_data.ipynb
+++ b/modeling_with_new_data.ipynb
@@ -144,9 +144,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def render_coordinates_file_to_img(coord_dict, resolution=(28, 28), stroke_width=2):\n",
-    "    adjusted_coords = parse_to_points_list(coord_dict)\n",
-    "    scaled = scale_points_for_pixels(adjusted_coords, resolution, stroke_width)\n",
+    "def render_coordinates_file_to_img(coord_list, resolution=(28, 28), stroke_width=2):\n",
+    "    scaled = scale_points_for_pixels(coord_list, resolution, stroke_width)\n",
     "    img = Image.new('L', resolution, color=0)\n",
     "    draw = ImageDraw.Draw(img)\n",
     "    for coords in scaled:\n",
@@ -180,17 +179,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One major change that I made to the raw coordinate data to enhance both the lstm and the bitmap files was to standardize it to a consistent number of points along a b-spline (done using the [NURBS-Python library](https://nurbs-python.readthedocs.io)). Having a consistent shape for all of the parameters is essential for the lstm and if I were to accomplish this through downsampling the points, it would outright ruin the data in many scenarios. The B-spline made the intermediate transitions natural along a curve and while typically use of a b-spline would smooth out corner points in an obtrusive way, the real time capture of the app essentially captures more points during moments where the flow of writing is slowed down (ie. a sharp direction change). With a surplus of control points towards the corners, the smoothing is minimized in places where it wouldn't be desired."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Reproducible results\n",
     "np.random.seed(SEED)\n",
     "\n",
+    "#Creating the inital train, val, test directories\n",
     "create_classification_dirs(rendered_split_paths.values(), reduced_hiragana_classes[\"char_id\"])\n",
     "\n",
+    "# This is the list which will become the lstm input and labels\n",
+    "choubenkyo_data = []\n",
+    "choubenkyo_labels = []\n",
+    "\n",
+    "#This list will reference the directory of origin, and the files that are generated/renamed through the train, test, split\n",
+    "#to external image file functions.\n",
     "pathmap = []\n",
+    "\n",
     "for source in os.listdir(raw_path):\n",
     "    old_dir = os.path.join(raw_path, source)\n",
     "    contents = os.listdir(old_dir)\n",
@@ -204,16 +218,30 @@
     "            for match in match_splits[i]:\n",
     "                match_raw_path = os.path.join(old_dir, match)\n",
     "                raw_strokes = load_pickle(match_raw_path)\n",
+    "                smoothed_strokes = parse_to_points_list(raw_strokes)\n",
     "                if len(raw_strokes) not in hiragana_classes[hiragana_classes[\"char_id\"]==label][\"stroke_count\"].reset_index(drop=True)[0]:\n",
     "                    pathmap.append([match_raw_path, np.nan])\n",
     "                    continue\n",
     "                new_path = os.path.join(new_dir, f\"{label}{key}{new_file_counters[i]:05}.png\")\n",
-    "                img = render_coordinates_file_to_img(raw_strokes, stroke_width=1)\n",
+    "                \n",
+    "                #Exports images for the CNN.\n",
+    "                img = render_coordinates_file_to_img(smoothed_strokes, stroke_width=1)\n",
     "                img = ImageOps.expand(img, 2)\n",
     "                img.save(new_path)\n",
+    "                \n",
+    "                #Saves observations for the lstm\n",
+    "                choubenkyo_data.append(strokes_to_array(smoothed_strokes))\n",
+    "                choubenkyo_labels.append(label)\n",
+    "                \n",
+    "                #Saves information to the document that preserves the link to the source images.\n",
     "                pathmap.append([match_raw_path, new_path])\n",
+    "                \n",
+    "                #Tracks changes to image iterator so some searches for existing directories can be avoided.\n",
     "                new_file_counters[i] += 1\n",
-    "pathmap = pd.DataFrame(pathmap, columns=[\"orig_file\", \"new_file\"])"
+    "\n",
+    "pathmap = pd.DataFrame(pathmap, columns=[\"orig_file\", \"new_file\"])\n",
+    "choubenkyo_data = np.vstack(choubenkyo_data)\n",
+    "choubenkyo_labels = pd.Series(choubenkyo_labels)"
    ]
   },
   {
@@ -221,6 +249,13 @@
    "metadata": {},
    "source": [
     "## Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The CNN"
    ]
   },
   {
@@ -563,6 +598,88 @@
    "source": [
     "test_batch = next(X_test_generator)\n",
     "image_class_evaluation(modelc1, test_batch[0], test_batch[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replaces the labels with an index.\n",
+    "reduced_hiragana_label_dict = {key:value for key, value in reduced_hiragana_classes.reset_index()[[\"char_id\",\"index\"]].to_numpy()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 0,\n",
+       " 'i': 1,\n",
+       " 'u': 2,\n",
+       " 'e': 3,\n",
+       " 'o': 4,\n",
+       " 'ka': 5,\n",
+       " 'ki': 6,\n",
+       " 'ku': 7,\n",
+       " 'ke': 8,\n",
+       " 'ko': 9,\n",
+       " 'sa': 10,\n",
+       " 'si': 11,\n",
+       " 'su': 12,\n",
+       " 'se': 13,\n",
+       " 'so': 14,\n",
+       " 'ta': 15,\n",
+       " 'ti': 16,\n",
+       " 'tu': 17,\n",
+       " 'te': 18,\n",
+       " 'to': 19,\n",
+       " 'na': 20,\n",
+       " 'ni': 21,\n",
+       " 'nu': 22,\n",
+       " 'ne': 23,\n",
+       " 'no': 24,\n",
+       " 'ha': 25,\n",
+       " 'hi': 26,\n",
+       " 'hu': 27,\n",
+       " 'he': 28,\n",
+       " 'ho': 29,\n",
+       " 'ma': 30,\n",
+       " 'mi': 31,\n",
+       " 'mu': 32,\n",
+       " 'me': 33,\n",
+       " 'mo': 34,\n",
+       " 'ya': 35,\n",
+       " 'yu': 36,\n",
+       " 'yo': 37,\n",
+       " 'ra': 38,\n",
+       " 'ri': 39,\n",
+       " 'ru': 40,\n",
+       " 're': 41,\n",
+       " 'ro': 42,\n",
+       " 'wa': 43,\n",
+       " 'wo': 44,\n",
+       " '-n': 45}"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reduced_hiragana_label_dict"
    ]
   },
   {
