--- a/kuzushiji_notebook.ipynb
+++ b/kuzushiji_notebook.ipynb
@@ -1420,6 +1420,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Freezing the first two sets of convolutions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -1632,7 +1639,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Experimental model 5"
+    "#### Freezing the first set of convolutions"
    ]
   },
   {
