--- a/initial_findings/kanji_transfer.ipynb
+++ b/initial_findings/kanji_transfer.ipynb
@@ -30,6 +30,7 @@
     "#Library imports\n",
     "import re\n",
     "import os\n",
+    "import sys\n",
     "import shutil\n",
     "import time\n",
     "import math\n",
@@ -55,6 +56,11 @@
     "from tensorflow.keras.layers import Dense, LSTM, Dropout, Conv2D, MaxPooling2D, Flatten\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from tensorflow.keras.regularizers import l1, l2\n",
+    "\n",
+    "\n",
+    "# Allows access to scripts and modules relative to the parent directory.\n",
+    "parent = os.path.dirname(os.getcwd())\n",
+    "sys.path.append(parent)\n",
     "\n",
     "\n",
     "#User Created functions\n",
