--- a/initial_findings/kuzushiji_notebook.ipynb
+++ b/initial_findings/kuzushiji_notebook.ipynb
@@ -16,6 +16,7 @@
     "#Library imports\n",
     "import re\n",
     "import os\n",
+    "import sys\n",
     "import time\n",
     "import math\n",
     "import random\n",
@@ -39,6 +40,11 @@
     "from tensorflow.keras.layers import Dense, LSTM, Dropout, Conv2D, MaxPooling2D, Flatten\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from tensorflow.keras.regularizers import l1, l2\n",
+    "\n",
+    "\n",
+    "# Allows access to scripts and modules relative to the parent directory.\n",
+    "parent = os.path.dirname(os.getcwd())\n",
+    "sys.path.append(parent)\n",
     "\n",
     "\n",
     "#User Created functions\n",
