export notebook to static markdown part 1

--- a/initial_findings/modeling_with_new_data.ipynb
+++ b/initial_findings/modeling_with_new_data.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "# Allows access to scripts and modules relative to the parent directory.\n",
     "parent = os.path.dirname(os.getcwd())\n",
-    "sys.path.append(parent)\n",
+    "sys.path.append(os.path.join(parent, \"functions\"))\n",
     "\n",
     "#User Created functions\n",
     "\n",
@@ -124,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hiragana_classes = pd.read_json(\"choubenkyo_kivy_app/app/draw_screen/characters/hiragana.json\")\n",
+    "hiragana_classes = pd.read_json(\"../choubenkyo_kivy_app/app/draw_screen/characters/hiragana.json\")\n",
     "\n",
     "# By converting the recorded stroke count to a list of integers, it will be easier to iterate through the data and remove obvious mistakes from the start.\n",
     "hiragana_classes[\"stroke_count\"] = hiragana_classes[\"stroke_count\"].map(lambda x: [int(item[0]) for item in re.finditer(\"\\d+\", x)])\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,13 +207,13 @@
        "        [0.45328405, 0.394279  ]])}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "example = load_pickle(\"data/choubenkyo_data/example.pickle\")\n",
+    "example = load_pickle(\"../data/choubenkyo_data/example.pickle\")\n",
     "example"
    ]
   },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,13 +380,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Stroring the common paths in variables\n",
-    "raw_path = \"data/choubenkyo_data/raw\"\n",
-    "rendered_path = \"data/choubenkyo_data/rasterized\"\n",
+    "raw_path = \"../data/choubenkyo_data/raw\"\n",
+    "rendered_path = \"../data/choubenkyo_data/rasterized\"\n",
     "rendered_split_paths = {\"train\": os.path.join(rendered_path, \"train\"),\n",
     "                        \"val\": os.path.join(rendered_path, \"val\"),\n",
     "                        \"test\": os.path.join(rendered_path, \"test\")}"
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "backups = ModelCheckpoint(\"model_backups/choubenkyo/modelc1-{epoch:02d}\", monitor=\"val_loss\")\n",
+    "backups = ModelCheckpoint(\"../model_backups/choubenkyo/modelc1-{epoch:02d}\", monitor=\"val_loss\")\n",
     "stopping = EarlyStopping(monitor=\"val_accuracy\", min_delta=0, patience=5, restore_best_weights=True)\n",
     "\n",
     "resultsc1 = modelc1.fit(X_train_generator, epochs=200, steps_per_epoch=51, validation_data=X_val_generator, validation_steps=15, callbacks=[backups, stopping])"
@@ -868,7 +868,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelkuzushiji = models.load_model('model_backups/kuzushiji/model6-26')"
+    "modelkuzushiji = models.load_model('../model_backups/kuzushiji/model6-26')"
    ]
   },
   {
@@ -992,7 +992,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "backups = ModelCheckpoint(\"model_backups/choubenkyo/modelc2-{epoch:02d}\", monitor=\"val_loss\")\n",
+    "backups = ModelCheckpoint(\"../model_backups/choubenkyo/modelc2-{epoch:02d}\", monitor=\"val_loss\")\n",
     "stopping = EarlyStopping(monitor=\"val_accuracy\", min_delta=0, patience=5, restore_best_weights=True)\n",
     "\n",
     "resultsc2 = modelc2.fit(X_train_generator, epochs=200, steps_per_epoch=51, validation_data=X_val_generator, validation_steps=15, callbacks=[backups, stopping])"
@@ -1143,7 +1143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelkanji = models.load_model('model_backups/kanji/modelk1-33')"
+    "modelkanji = models.load_model('../model_backups/kanji/modelk1-33')"
    ]
   },
   {
@@ -1212,7 +1212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "backups = ModelCheckpoint(\"model_backups/choubenkyo/modelc3-{epoch:02d}\", monitor=\"val_loss\")\n",
+    "backups = ModelCheckpoint(\"../model_backups/choubenkyo/modelc3-{epoch:02d}\", monitor=\"val_loss\")\n",
     "stopping = EarlyStopping(monitor=\"val_accuracy\", min_delta=0, patience=5, restore_best_weights=True)\n",
     "\n",
     "resultsc3 = modelc3.fit(X_train_generator, epochs=200, steps_per_epoch=51, validation_data=X_val_generator, validation_steps=15, callbacks=[backups, stopping])"
@@ -1412,7 +1412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "backups = ModelCheckpoint(\"model_backups/kanji/modelc4-{epoch:02d}\", monitor=\"val_loss\")\n",
+    "backups = ModelCheckpoint(\"../model_backups/kanji/modelc4-{epoch:02d}\", monitor=\"val_loss\")\n",
     "stopping = EarlyStopping(monitor=\"val_accuracy\", min_delta=0, patience=8, restore_best_weights=True)\n",
     "\n",
     "resultsc4 = modelc4.fit(X_train, y_train, epochs=200, batch_size=10, validation_data=(X_val, y_val), class_weight=class_weights, callbacks=[backups, stopping])"
