changed static notebook conversion to html and updated visualizations for kuzushiji notebook

--- a/initial_findings/kanji_transfer.ipynb
+++ b/initial_findings/kanji_transfer.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "# Allows access to scripts and modules relative to the parent directory.\n",
     "parent = os.path.dirname(os.getcwd())\n",
-    "sys.path.append(parent)\n",
+    "sys.path.append(os.path.join(parent, \"functions\"))\n",
     "\n",
     "\n",
     "#User Created functions\n",
