added seperation between preliminary investigation and newer modeling, where the initial exploration of the data, and work with the kuzushiji dataset will be frozen.

--- a/initial_findings/kanji_transfer.ipynb
+++ b/initial_findings/kanji_transfer.ipynb
@@ -86,7 +86,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/anacuda/work/nyc-mhtn-ds-021720/japanese_text_classifiers/setup_functions.py:23: MatplotlibDeprecationWarning: \n",
+      "/home/anacuda/work/nyc-mhtn-ds-021720/japanese_text_classifiers/functions/setup_functions.py:23: MatplotlibDeprecationWarning: \n",
       "The createFontList function was deprecated in Matplotlib 3.2 and will be removed two minor releases later. Use FontManager.addfont instead.\n",
       "  font_list = fm.createFontList(font_files)\n"
      ]
@@ -153,8 +153,8 @@
    "outputs": [],
    "source": [
     "#Creates relative paths for the source directory and the destination when duplicates of the images are split into training/testing groups\n",
-    "orig_kuzushiji_kanji_dir = 'data/kuzushiji49/kkanji2'\n",
-    "split_kanji_dir = \"data/kuzushiji49/kanji_transfer\""
+    "orig_kuzushiji_kanji_dir = '../data/kuzushiji49/kkanji2'\n",
+    "split_kanji_dir = \"../data/kuzushiji49/kanji_transfer\""
    ]
   },
   {
@@ -507,15 +507,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Imports the data\n",
-    "emnist_train_data = parse_emnist(\"data/emnist/emnist-bymerge-train-images-idx3-ubyte.gz\")\n",
-    "emnist_train_labels = parse_emnist(\"data/emnist/emnist-bymerge-train-labels-idx1-ubyte.gz\", offset=8, isimg=False)\n",
-    "emnist_test_data = parse_emnist(\"data/emnist/emnist-bymerge-test-images-idx3-ubyte.gz\")\n",
-    "emnist_test_labels = parse_emnist(\"data/emnist/emnist-bymerge-test-labels-idx1-ubyte.gz\", offset=8, isimg=False)"
+    "emnist_train_data = parse_emnist(\"../data/emnist/emnist-bymerge-train-images-idx3-ubyte.gz\")\n",
+    "emnist_train_labels = parse_emnist(\"../data/emnist/emnist-bymerge-train-labels-idx1-ubyte.gz\", offset=8, isimg=False)\n",
+    "emnist_test_data = parse_emnist(\"../data/emnist/emnist-bymerge-test-images-idx3-ubyte.gz\")\n",
+    "emnist_test_labels = parse_emnist(\"../data/emnist/emnist-bymerge-test-labels-idx1-ubyte.gz\", offset=8, isimg=False)"
    ]
   },
   {
@@ -662,10 +662,10 @@
    "outputs": [],
    "source": [
     "# Importing the datasets\n",
-    "obs_kana_train_data = np.load(\"data/kuzushiji49/train/k49-train-imgs.npz\")['arr_0']\n",
-    "obs_kana_train_labels = np.load(\"data/kuzushiji49/train/k49-train-labels.npz\")['arr_0']\n",
-    "obs_kana_test_data = np.load(\"data/kuzushiji49/test/k49-test-imgs.npz\")['arr_0']\n",
-    "obs_kana_test_labels = np.load(\"data/kuzushiji49/test/k49-test-labels.npz\")['arr_0']\n",
+    "obs_kana_train_data = np.load(\"../data/kuzushiji49/train/k49-train-imgs.npz\")['arr_0']\n",
+    "obs_kana_train_labels = np.load(\"../data/kuzushiji49/train/k49-train-labels.npz\")['arr_0']\n",
+    "obs_kana_test_data = np.load(\"../data/kuzushiji49/test/k49-test-imgs.npz\")['arr_0']\n",
+    "obs_kana_test_labels = np.load(\"../data/kuzushiji49/test/k49-test-labels.npz\")['arr_0']\n",
     "\n",
     "# Eliminating the classes that are already used in the main model.\n",
     "obsolete_mask_train = (obs_kana_train_labels == 44) | (obs_kana_train_labels == 45) | (obs_kana_train_labels == 48)\n",
@@ -909,7 +909,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "backups = ModelCheckpoint(\"model_backups/kanji/modelk1-{epoch:02d}\", monitor=\"val_loss\")\n",
+    "backups = ModelCheckpoint(\"../model_backups/kanji/modelk1-{epoch:02d}\", monitor=\"val_loss\")\n",
     "stopping = EarlyStopping(monitor=\"val_accuracy\", min_delta=0, patience=5, restore_best_weights=True)\n",
     "\n",
     "resultsk1 = modelk1.fit(X_train_generator, epochs=200, steps_per_epoch=6136, validation_data=X_val_generator, validation_steps=1648, class_weight=class_weights, callbacks=[backups, stopping])"
