current notebook added with extended hiragana

--- a/initial_findings/kuzushiji_notebook.ipynb
+++ b/initial_findings/kuzushiji_notebook.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Modeling using the Kuzushiji dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook examines the effectiveness of various types of convolutional neural networks to classify among the Kuzushiji 49 dataset with the labels that correspond to characters still in use today."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Imports"
    ]
   },
