--- a/initial_findings/modeling_with_new_data.ipynb
+++ b/initial_findings/modeling_with_new_data.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Modeling with new data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook examines the effectiveness of both a cnn and an lstm to make predictions on generated character drawing using the Choubenkyo android app. It also evaluates the effectiveness of incorporating transfer learning using models from the other two notebooks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Imports"
    ]
   },
